# fel4-test-project

./: .gitignore  Cargo.toml  README.md
sel4twinkle-alloc/: Cargo.toml
sel4twinkle-alloc/src/: allocator.rs  lib.rs  vka.rs
src/: bootinfo_manager.rs  fel4_test.rs  lib.rs  macros.rs  thread_a.rs  thread_b.rs
