[package]
name = "fel4-test-project"
version = "0.1.0"
authors = ["jonlamb-gh <lamb.jon.io@gmail.com>"]

[dependencies]
libsel4-sys = {git = "https://github.com/jonlamb-gh/libsel4-sys.git", branch = "master"}

[dependencies.wee_alloc]
version = "0.4"
features = ["static_array_backend"]
optional = true

[dependencies.proptest]
version = "0.7"
default-features = false
features = ["alloc", "nightly"]
optional = true

[features]
default = ["alloc"]
alloc = ["wee_alloc"]
test = ["alloc", "proptest"]
